# reelmaker

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PROJECT_MANIFEST.md  README.md  ROADMAP.md  createTarGz.sh  notes.txt  pyproject.toml  requirements-transcription.txt  requirements-vision.txt  startGui.bat  startGui.sh
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md
examples/: run_reelmaker.sh
reelmaker/: __main__.py  analyzer.py  boundary.py  cli.py  console.py  correction_dictionary.py  davinci_xml.py  framing.py  gui.py  gui_style.py  models.py  ollama_client.py  progress.py  renderer.py  scene_analysis.py  subtitle_corrector.py  subtitle_layout.py  subtitles.py  timecode.py  transcript_io.py  transcription.py  utils.py  vision.py  visual_text.py  youtube.py
reelmaker/data/: corrections_fr.json
scripts/: check_project.sh  package_project.sh
tests/: test_analyzer_resume.py  test_boundary.py  test_cli_davinci.py  test_cli_defaults.py  test_composition_and_progress.py  test_davinci_xml.py  test_framing.py  test_gui_smoke.py  test_ollama_client.py  test_quality_v070.py  test_quality_v080.py  test_renderer_layout.py  test_scene_analysis.py  test_subtitle_correction.py  test_timecode_and_subtitles.py  test_transcription.py  test_vision_import.py  test_youtube_selection.py
